--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "pokelist",
+  "homepage": "/pokelist",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -15,8 +16,6 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.6",
-    "@mui/x-data-grid": "^6.13.0",
-    "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.2.0",
