--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.3",
     "@mui/material": "^5.13.6",
+    "framer-motion": "^10.17.9",
     "react": "^18.2.0",
     "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1"
+    "react-router": "^6.21.1",
+    "react-router-dom": "^6.21.1",
+    "react-transition-group": "^4.4.5",
+    "styled-components": "^6.1.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
