--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.13.6",
     "framer-motion": "^10.17.9",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.2.0",
     "react-router": "^6.21.1",
