--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "styled-components": "^6.1.6"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.2.0",
+    "@testing-library/react": "^14.1.2",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
@@ -37,6 +39,7 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "jsdom": "^23.2.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
     "vitest": "^0.34.1"
